; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/libevent/extr_event.c_update_time_cache.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/libevent/extr_event.c_update_time_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.event_base = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@EVENT_BASE_FLAG_NO_CACHE_TIME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.event_base*)* @update_time_cache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_time_cache(%struct.event_base* %0) #0 {
  %2 = alloca %struct.event_base*, align 8
  store %struct.event_base* %0, %struct.event_base** %2, align 8
  %3 = load %struct.event_base*, %struct.event_base** %2, align 8
  %4 = getelementptr inbounds %struct.event_base, %struct.event_base* %3, i32 0, i32 1
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  store i64 0, i64* %5, align 8
  %6 = load %struct.event_base*, %struct.event_base** %2, align 8
  %7 = getelementptr inbounds %struct.event_base, %struct.event_base* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = load i32, i32* @EVENT_BASE_FLAG_NO_CACHE_TIME, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %17, label %12

12:                                               ; preds = %1
  %13 = load %struct.event_base*, %struct.event_base** %2, align 8
  %14 = load %struct.event_base*, %struct.event_base** %2, align 8
  %15 = getelementptr inbounds %struct.event_base, %struct.event_base* %14, i32 0, i32 1
  %16 = call i32 @gettime(%struct.event_base* %13, %struct.TYPE_2__* %15)
  br label %17

17:                                               ; preds = %12, %1
  ret void
}

declare dso_local i32 @gettime(%struct.event_base*, %struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
